--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Pricing from '../components/Pricing.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/ui/Footer.astro';
 import Portfolio from '../components/Portfolio.astro';
+import StickyContact from '../components/ui/StickyContact.astro';
 ---
 
 <Layout title="CetZz Labs | Una empresa de tecnología diferente">
@@ -21,4 +22,5 @@ import Portfolio from '../components/Portfolio.astro';
 	<Portfolio />
 	<Contact />
 	<Footer />
+	<StickyContact />
 </Layout>
