--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -141,7 +141,7 @@
 }
 
 .contact-card {
-    @apply flex items-center gap-4 p-6 max-w-[500px] w-full lg:w-auto lg:min-w-[300px] bg-black-900/10 backdrop-blur-lg border border-black-900 rounded-lg transition-all duration-300 hover:bg-black-900/20 hover:border-primary-400/30 hover:shadow-lg hover:shadow-primary-700/50;
+    @apply flex items-center gap-4 p-6 max-w-[500px] w-full lg:w-auto lg:min-w-[300px] bg-black-900/10 backdrop-blur-lg border border-black-900/20 rounded-lg transition-all duration-300 hover:bg-black-900/20 hover:border-primary-400/30 hover:shadow-lg hover:shadow-primary-700/50;
 }
 
 .contact-card:hover .contact-icon {
